Fix header spacing

--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -143,6 +143,8 @@
 }
 
 .nav__list {
+  margin-bottom: 0;
+
   .nav__item {
     display: inline-block;
     margin: 0 20px;
